# pythonweb_hw10

./: .gitignore  compose.yaml  pyproject.toml  requierements.txt
hw10/: db.sqlite3  hw10.sqlite3
hw10/app_quotes/: models.py  urls.py  views.py
hw10/app_quotes/migrations/: 0001_initial.py
hw10/app_quotes/static/app_quotes/: normalize.css  styles.css
hw10/app_quotes/templates/app_quotes/: addauthor.html  addquote.html  author_info.html  authors.html  base.html  index.html  login.html  register.html  tagged-quotes.html
hw10/htmls/: Quotes to Scrape.html  index.html  normalize.css  signin.html
hw10/hw10/: settings.py
hw10/mongo_migration/: mongo_2_pg.py  odm_mongo.py  orm_alchemy.py
